--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "amp-snippets",
   "main": "./lib/amp-snippets",
   "version": "0.0.0",
-  "description": "A short description of your package",
+  "description": "Snippets for AMP HTML",
   "keywords": [
   ],
   "activationCommands": {
